--- a/lagou/pom.xml
+++ b/lagou/pom.xml
@@ -228,6 +228,13 @@
             <version>1.2.17</version>
         </dependency>
 
+        <!-- 解决跨域问题所需依赖 -->
+        <dependency>
+            <groupId>com.thetransactioncompany</groupId>
+            <artifactId>cors-filter</artifactId>
+            <version>2.5</version>
+        </dependency>
+
 
 
     </dependencies>
